Фикс после двенадцатого этапа альфа теста
